# kinematic-motion-retargeting

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
src/GRABMotionSequenceIO/: GRABMotionSequenceIO.cpp  GRABMotionSequenceIO.hpp  GRABMotionSequenceIOMain.cpp  README.md  cnpy.cpp  cnpy.h
src/contactAxisCalibrationContext/: README.md
src/contactAxisCalibrationContext/scripts/: contactAxisCalibrationContextProperties.mel  contactAxisCalibrationContextValues.mel
src/contactRaytraceContext/: README.md  contactRaytraceContext.cpp  contactRaytraceContext.hpp  contactRaytraceContextCommand.cpp  contactRaytraceContextCommand.hpp  contactRaytracerMain.cpp
src/contactRaytraceContext/scripts/: contactRaytraceContextProperties.mel  contactRaytraceContextValues.mel
src/contactSequenceIO/: README.md  contactSequenceIO.cpp  contactSequenceIO.hpp  contactSequenceIOMain.cpp
src/contactTransferEditContext/: README.md  contactTransferEditContext.cpp  contactTransferEditContext.hpp  contactTransferEditContextCommand.cpp  contactTransferEditContextCommand.hpp  contactTransferEditorMain.cpp  geometryProcessingContext.cpp  geometryProcessingContext.hpp
src/contactTransferEditContext/scripts/: contactTransferEditContextProperties.mel  contactTransferEditContextValues.mel
src/fusedMotionEditContext/: README.md  fusedMotionEditContext.cpp  fusedMotionEditContext.hpp  fusedMotionEditContextCommand.cpp  fusedMotionEditContextCommand.hpp  fusedMotionEditorMain.cpp
src/fusedMotionEditContext/scripts/: fusedMotionEditContextProperties.mel  fusedMotionEditContextValues.mel  mmRename.mel  removePasteScript.mel  removeSourceHandData.mel
src/keyframeMotionSequenceIO/: README.md  keyframeMotionSequenceIO.cpp  keyframeMotionSequenceIO.hpp  keyframeMotionSequenceIOMain.cpp
src/markerCalibrationContext/: README.md  markerCalibrationContext.cpp  markerCalibrationContext.hpp  markerCalibrationContextCommand.cpp  markerCalibrationContextCommand.hpp  markerCalibratorMain.cpp
src/smoothMotionEditContext/: README.md  smoothMotionEditContext.cpp  smoothMotionEditContext.hpp  smoothMotionEditContextCommand.cpp  smoothMotionEditContextCommand.hpp  smoothMotionEditorMain.cpp
src/smoothMotionEditContext/scripts/: smoothMotionEditContextProperties.mel  smoothMotionEditContextValues.mel
src/virtualMarkerIO/: README.md  virtualMarkerIO.cpp  virtualMarkerIO.hpp  virtualMarkerIOMain.cpp
