CMAKE_MINIMUM_REQUIRED(VERSION 3.12.0)
PROJECT(kinematic-motion-retargeting)

SET(CMAKE_CXX_STANDARD 20)

SET(MAYA_VERSION 2024 CACHE STRING "Maya version number")

SET(JSON_LIB "deps/rapidjson")
SET(JSON "${JSON_LIB}/JSONUtils.hpp" "${JSON_LIB}/JSONUtils.cpp")

SET(BSPLINE_LIB "deps/bSplineCurveFit")
SET(BSPLINE "${BSPLINE_LIB}/BSplineCurveFit.h" "${BSPLINE_LIB}/BSplineCurve.h" "${BSPLINE_LIB}/Vector2.h")

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(ZLIB REQUIRED)

SET(CUSTOM_DEFINITIONS "REQUIRE_IOSTREAM;_BOOL")
SET(MAYA_INSTALL_BASE_SUFFIX "")
SET(MAYA_INC_SUFFIX "include")
SET(MAYA_LIB_SUFFIX "lib")

IF(WIN32)
    SET(MAYA_INSTALL_BASE_DEFAULT "C:/Program Files/Autodesk")
    SET(CUSTOM_DEFINITIONS "${CUSTOM_DEFINITIONS};NT_PLUGIN")
ELSEIF(APPLE)
    SET(MAYA_INSTALL_BASE_DEFAULT "/Applications/Autodesk")
    SET(MAYA_LIB_SUFFIX "Maya.app/Contents/MacOS")
    SET(CUSTOM_DEFINITIONS "${CUSTOM_DEFINITIONS};OSMac_")
ELSE()
    SET(MAYA_INSTALL_BASE_DEFAULT "/usr/autodesk")
ENDIF()

SET(MAYA_INSTALL_BASE_PATH ${MAYA_INSTALL_BASE_DEFAULT} CACHE STRING "Path containing your Maya installation")

SET(LIBRARIES ${LIBRARIES} "Foundation" "OpenMaya" "OpenMayaAnim" "OpenMayaUI" "OpenMayaRender" ${OPENGL_LIBRARIES})

SET(_MAYA_LOCATION ${MAYA_INSTALL_BASE_PATH}/maya${MAYA_VERSION}${MAYA_INSTALL_BASE_SUFFIX})

# == Deps

ADD_SUBDIRECTORY(deps/geometry-central)
ADD_SUBDIRECTORY(deps/nlopt)
ADD_SUBDIRECTORY(deps/fcpw)

INCLUDE_DIRECTORIES(${_MAYA_LOCATION}/${MAYA_INC_SUFFIX} ${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS} ${ZLIB_INCLUDE_DIRS})

LINK_DIRECTORIES(${_MAYA_LOCATION}/${MAYA_LIB_SUFFIX})

SET(FUSED_MOTION_EDIT_CONTEXT_FILES
    "src/fusedMotionEditContext/fusedMotionEditContext.hpp"
    "src/fusedMotionEditContext/fusedMotionEditContext.cpp"
    "src/fusedMotionEditContext/fusedMotionEditContextCommand.hpp"
    "src/fusedMotionEditContext/fusedMotionEditContextCommand.cpp"
    "src/fusedMotionEditContext/fusedMotionEditorMain.cpp"
)

SET(MARKER_CALIBRATION_CONTEXT_FILES
    "src/markerCalibrationContext/markerCalibrationContext.hpp"
    "src/markerCalibrationContext/markerCalibrationContext.cpp"
    "src/markerCalibrationContext/markerCalibrationContextCommand.hpp"
    "src/markerCalibrationContext/markerCalibrationContextCommand.cpp"
    "src/markerCalibrationContext/markerCalibratorMain.cpp"
)

SET(_PROJECT_FUSED_MOTION_EDIT_CONTEXT ${PROJECT_NAME}-fusedMotionEditContext)
SET(_PROJECT_MARKER_CALIBRATION_CONTEXT ${PROJECT_NAME}-markerCalibrationContext)

ADD_LIBRARY(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} SHARED ${FUSED_MOTION_EDIT_CONTEXT_FILES})
TARGET_LINK_LIBRARIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} ${LIBRARIES} nlopt)

ADD_LIBRARY(${_PROJECT_MARKER_CALIBRATION_CONTEXT} SHARED ${MARKER_CALIBRATION_CONTEXT_FILES})
TARGET_LINK_LIBRARIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} ${LIBRARIES})

SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES COMPILE_DEFINITIONS "${CUSTOM_DEFINITIONS}")
SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES OUTPUT_NAME ${_PROJECT_FUSED_MOTION_EDIT_CONTEXT})
SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES CLEAN_DIRECT_OUTPUT 1)

SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES COMPILE_DEFINITIONS "${CUSTOM_DEFINITIONS}")
SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES OUTPUT_NAME ${_PROJECT_MARKER_CALIBRATION_CONTEXT})
SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES CLEAN_DIRECT_OUTPUT 1)

IF(WIN32)
    SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES SUFFIX ".mll")
    SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES LINK_FLAGS "/export:initializePlugin /export:uninitializePlugin")

    SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES SUFFIX ".mll")
    SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES LINK_FLAGS "/export:initializePlugin /export:uninitializePlugin")
ELSEIF(APPLE)
    SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES PREFIX "")
    SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES SUFFIX ".bundle")

    SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES PREFIX "")
    SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES SUFFIX ".bundle")
ELSE() # Linux
    SET_TARGET_PROPERTIES(${_PROJECT_MARKER_CALIBRATION_CONTEXT} PROPERTIES PREFIX "")

    SET_TARGET_PROPERTIES(${_PROJECT_FUSED_MOTION_EDIT_CONTEXT} PROPERTIES PREFIX "")
ENDIF()
